--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 
-<p style="text-align: center;"><strong>Welcome to the BT&E RFID DASHBOARD. </strong></p>
+<p style="text-align: center;"><strong>Welcome to the BT&E RFID TEST DASHBOARD. </strong></p>
 <p style="text-align: center;">Use the tabs above to view detailed information, or click "REFRESH DATA" to update data immediately.</p>
-<p style="text-align: center;">THIS SERVER WILL BE THE MOST STABLE.</p>
+<p style="text-align: center;">THIS SERVER WILL BE THE MOST RECENT but may have crashes.</p>
 <h3 style="padding-left: 240px;"><strong>Scanable Items- </strong></h3>
 <ul>
 <li style="list-style-type: none;">
